--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
 
         <application
             android:allowBackup="true"
-            android:label="@string/app_name"
-            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name_icon"
+            android:icon="@drawable/ic_launcher"
             android:theme="@style/AppTheme">
 
             <activity
