--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+        <uses-permission android:name="com.sec.android.provider.badge.permission.READ" />
+        <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
+
         <application
             android:allowBackup="true"
             android:label="@string/app_name_icon"
